Actions
Bug #12081
closedDir['*'] doesn't list files which name include Chinese character on Simplefied Chinese Windows
Bug #12081:
Dir['*'] doesn't list files which name include Chinese character on Simplefied Chinese Windows
Description
>dir A:\Build
驱动器 A 中的卷是 RAMDISK
卷的序列号是 411D-42E2
A:\Build 的目录
2016/02/18 09:23 <DIR> .
2016/02/18 09:23 <DIR> ..
2016/02/18 09:23 <DIR> dir1
2016/02/18 09:22 0 file1.txt
2016/02/18 09:22 0 file2.txt
2016/02/18 09:22 0 文件1.txt
2016/02/18 09:22 0 文件2.txt
2016/02/18 09:23 <DIR> 目录1
4 个文件 0 字节
4 个目录 22,377,705,472 可用字节
Updated by personnel (Am I Who) over 10 years ago
- Description updated (diff)
Updated by nobu (Nobuyoshi Nakada) over 10 years ago
- Description updated (diff)
What is your code page?
Updated by personnel (Am I Who) over 10 years ago
Nobuyoshi Nakada wrote:
What is your code page?
CP936
Updated by nobu (Nobuyoshi Nakada) over 10 years ago
- Status changed from Open to Closed
Applied in changeset r53877.
dir.c: paths as UTF-8
- dir.c (push_pattern, push_glob): deal with read paths as UTF-8
to stat later, on Windows as well as OS X.
[ruby-core:73868] [Bug #12081]
Updated by usa (Usaku NAKAMURA) over 10 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: UNKNOWN to 2.1: WONTFIX, 2.2: WONTFIX, 2.3: REQUIRED
Updated by naruse (Yui NARUSE) over 10 years ago
- Backport changed from 2.1: WONTFIX, 2.2: WONTFIX, 2.3: REQUIRED to 2.1: WONTFIX, 2.2: WONTFIX, 2.3: DONE
ruby_2_3 r54407 merged revision(s) 53877,53881.
Actions